Fix alignment for blocks with padding (#181)
* Apply fix

* Add @custom-media --base defined in design style settings

--- a/.dev/assets/design-styles/modern/css/style-modern.css
+++ b/.dev/assets/design-styles/modern/css/style-modern.css
@@ -68,13 +68,12 @@
 
 /* Blocks with applied padding */
 
-/*  45rem = --theme-max-w-base + (--theme-block-padding-x * 2) */
 .wp-block-code,
 .wp-block-verse,
 p.has-background,
 .wp-block-pullquote,
 .wp-block-cover:not(.alignwide):not(.alignfull) {
-	@media (max-width: 54rem) {
+	@media (--base) {
 		margin-left: var(--theme-block-padding-x);
 		margin-right: var(--theme-block-padding-x);
 	}
